[tool.poetry]
name = "kubecrd"
version = "0.1.0"
description = "Create Kubernetes CRD using Python dataclasses"
authors = ["Abhilash Raj <raj.abhilash1@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.7"
apischema = "^0.17.5"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-glob='*.rst'"
