[tool.poetry]
name = "kubecrd"
version = "0.2.0"
description = "Create Kubernetes CRD using Python dataclasses"
authors = ["Abhilash Raj <raj.abhilash1@gmail.com>"]
license = "Apache-2.0"
readme = "README.rst"
repository = "https://github.com/maxking/kubecrd"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/maxking/kubecrd/issues"

[tool.poetry.dependencies]
python = ">=3.7,<4"
apischema = ">=0.15.0"
PyYAML = ">=6.0"
kubernetes = "^23.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
kopf = "^1.35.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-glob='*.rst'"
